tests/functional/lang/eval-fail-fetchTree-relative-path.err.exp
error:
       … while calling the 'fetchTree' builtin
         at /pwd/lang/eval-fail-fetchTree-relative-path.nix:1:1:
            1| builtins.fetchTree "file:./relative-path.tar.gz"
             | ^
            2|

       … while fetching the input 'file:./relative-path.tar.gz'

       error: tarball 'file:./relative-path.tar.gz' uses a relative path. Relative paths are not supported because the base directory is undefined. Use an absolute path instead.
